# circom-scotia

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.cargo/: config
.github/workflows/: test.yml
benches/: keccak.rs  sha256.rs
examples/: keccak.rs  sha256.rs  toy.rs
examples/keccak/: circom_keccak256.wasm
examples/sha256/main_js/: input.json  output.wtns
src/: cxx.rs  error.rs  lib.rs  r1cs.rs  reader.rs  util.rs
src/circom/: circuit.rs  file.rs  reader.rs  wasm.rs
src/witness/: circom.rs  error.rs  memory.rs  mod.rs  witness_calculator.rs
