[package]
name = "circom-scotia"
version = "0.1.2"
edition = "2021"
authors = ["Hanting Zhang <winston@lurk-lab.com>"]
description = "Middleware to compile Circom circuits to Bellperson"
documentation = "https://github.com/lurk-lab/circom-scotia/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/lurk-lab/circom-scotia"
license = "MIT OR Apache-2.0"
keywords = ["zkSNARKs", "cryptography", "proofs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bellpepper-core = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev" }
byteorder = "1.4.3"
cfg-if = "1.0.0"
color-eyre = "0.6.2"
crypto-bigint = { version = "0.5.2", features = ["serde"] }
ff = { version = "0.13", features = ["derive"] }
fnv = "1.0.7"
itertools = "0.9.0"
serde = "1.0"
serde_json = "1.0.85"
thiserror = "1.0.43"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = "4.0.0"
wasmer-compiler-llvm = { version = "4.1.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "4.0.0", features = ["std", "js"], default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }

[dev-dependencies]
pasta_curves = { version = "0.5.1" }

[features]
default = ["circom-2"]
circom-2 = []
llvm = ["dep:wasmer-compiler-llvm"]
